Error Mitigation/MagiCoder/Data/javax_xml_bind_annotation_adapters/javax_xml_bind_annotation_adaptersOutputResult.txt
Sample: HexBinaryAdapter_1
----------------------------------------------------------------
output:
./Data/javax_xml_bind_annotation_adapters/javaFiles/HexBinaryAdapter_1.java:1: error: package javax.xml.bind.annotation.adapters does not exist
import javax.xml.bind.annotation.adapters.HexBinaryAdapter;
                                         ^
./Data/javax_xml_bind_annotation_adapters/javaFiles/HexBinaryAdapter_1.java:5: error: cannot find symbol
        HexBinaryAdapter hexBinaryAdapter = new HexBinaryAdapter();
        ^
  symbol:   class HexBinaryAdapter
  location: class HexBinaryAdapter_1
./Data/javax_xml_bind_annotation_adapters/javaFiles/HexBinaryAdapter_1.java:5: error: cannot find symbol
        HexBinaryAdapter hexBinaryAdapter = new HexBinaryAdapter();
                                                ^
  symbol:   class HexBinaryAdapter
  location: class HexBinaryAdapter_1
3 errors


================================================================

Sample: HexBinaryAdapter_2
----------------------------------------------------------------
output:
./Data/javax_xml_bind_annotation_adapters/javaFiles/HexBinaryAdapter_2.java:1: error: package javax.xml.bind.annotation.adapters does not exist
import javax.xml.bind.annotation.adapters.HexBinaryAdapter;
                                         ^
./Data/javax_xml_bind_annotation_adapters/javaFiles/HexBinaryAdapter_2.java:5: error: cannot find symbol
        HexBinaryAdapter hexBinaryAdapter = new HexBinaryAdapter();
        ^
  symbol:   class HexBinaryAdapter
  location: class HexBinaryAdapter_2
./Data/javax_xml_bind_annotation_adapters/javaFiles/HexBinaryAdapter_2.java:5: error: cannot find symbol
        HexBinaryAdapter hexBinaryAdapter = new HexBinaryAdapter();
                                                ^
  symbol:   class HexBinaryAdapter
  location: class HexBinaryAdapter_2
3 errors


================================================================

Sample: NormalizedStringAdapter_3
----------------------------------------------------------------
output:
./Data/javax_xml_bind_annotation_adapters/javaFiles/NormalizedStringAdapter_3.java:1: error: package javax.xml.bind.annotation.adapters does not exist
import javax.xml.bind.annotation.adapters.NormalizedStringAdapter;
                                         ^
./Data/javax_xml_bind_annotation_adapters/javaFiles/NormalizedStringAdapter_3.java:5: error: cannot find symbol
        NormalizedStringAdapter adapter = new NormalizedStringAdapter();
        ^
  symbol:   class NormalizedStringAdapter
  location: class NormalizedStringAdapter_3
./Data/javax_xml_bind_annotation_adapters/javaFiles/NormalizedStringAdapter_3.java:5: error: cannot find symbol
        NormalizedStringAdapter adapter = new NormalizedStringAdapter();
                                              ^
  symbol:   class NormalizedStringAdapter
  location: class NormalizedStringAdapter_3
3 errors


================================================================

Sample: NormalizedStringAdapter_4
----------------------------------------------------------------
output:
./Data/javax_xml_bind_annotation_adapters/javaFiles/NormalizedStringAdapter_4.java:1: error: package javax.xml.bind.annotation.adapters does not exist
import javax.xml.bind.annotation.adapters.NormalizedStringAdapter;
                                         ^
./Data/javax_xml_bind_annotation_adapters/javaFiles/NormalizedStringAdapter_4.java:5: error: cannot find symbol
        NormalizedStringAdapter adapter = new NormalizedStringAdapter();
        ^
  symbol:   class NormalizedStringAdapter
  location: class NormalizedStringAdapter_4
./Data/javax_xml_bind_annotation_adapters/javaFiles/NormalizedStringAdapter_4.java:5: error: cannot find symbol
        NormalizedStringAdapter adapter = new NormalizedStringAdapter();
                                              ^
  symbol:   class NormalizedStringAdapter
  location: class NormalizedStringAdapter_4
3 errors


================================================================

